--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brian Timba | WDD 130</title>
+    <meta name="description" content="Brian Timba, wdd130, course main page">
+    <meta name="author" content="Brian Timba">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,6 +21,11 @@
         <img src="images/profile.webp" alt="My name is Brian Timba" width="200">
         <p>Hello, my name is Brian Timba. I'm from Zimbabwe and I served my mission in South Africa Cape Town where I currently reside. I'm married and a father of lovely daughter who is currently 5 months old. I am mostly an introvert and but I do speak when spoken to. I enjoy watching soccer, surfing the net and spending time with my family.</p>
     </main>
+    <aside>
+        <h2>Zimbabwe</h2>
+        <img src="images/vicfalls.webp" alt="The majestic Victoria Falls" width="200">
+        <p>Zimbabwe is a land-locked country located in Southern Africa. It is a land field with vast varieties of flora and fauna. It is home to one of the seven wonders of the world 'The Victoria Falls'.</p>
+    </aside>
     <footer>
         <p>©2025 | Brian Timba | Hermanus, South Africa</p>
     </footer>
