holy-grail-ammend

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -23,6 +23,10 @@
                 <h2>Heading</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo ratione eum quibusdam? Sunt, excepturi incidunt!</p>
             </section>
+            <section>
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, exercitationem?</p>
+            </section>
         </main>
         <aside>
             <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/johannesburg-south-africa/200x320/johannesburg-south-africa-temple-lds-450241-wallpaper.jpg" alt="Johannesburg South Africa temple" width="200">
