--- a/index.html
+++ b/index.html
@@ -14,20 +14,40 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.youtube.com/watch?v=1mgjPtgziWQ">Youtube</a>
+            <a href="https://www.linkedin.com/feed/">linkedin</a>
         </nav>
     </header>
     <main>
         <h1>Brian Timba | WDD 130</h1>
         <img src="images/profile.webp" alt="My name is Brian Timba" width="200">
-        <p>Hello, my name is Brian Timba. I'm from Zimbabwe and I served my mission in South Africa Cape Town where I currently reside. I'm married and a father of lovely daughter who is currently 5 months old. I am mostly an introvert and but I do speak when spoken to. I enjoy watching soccer, surfing the net and spending time with my family.</p>
+        <p>Hello, my name is Brian Timba.
+            I'm from Zimbabwe and I served my mission in South Africa Cape Town where I currently reside.
+            I'm married and a father of lovely daughter who is currently 5 months old. 
+            I am mostly an introvert but I do speak when spoken to.
+            I enjoy watching soccer, surfing the net and spending time with my family.
+            I also enjoy food especially cheesy meals.
+            I would also like to travel the world and explore new places and be exposed to different cultures.
+            I'm interested in learning different languages as well.
+            -------------------------------------------------------
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt et ea quia consequatur inventore molestias voluptatibus voluptatum deserunt mollitia excepturi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sapiente quasi ratione repellat optio, delectus in quaerat minus nostrum nemo ullam fuga dolore quibusdam corrupti sequi animi recusandae, ducimus aperiam non blanditiis. Ea, saepe illo repudiandae nisi aperiam quod voluptatibus magnam dignissimos beatae quidem numquam. Dicta quis voluptatibus repellat, excepturi quaerat ducimus itaque modi ut, natus eos officia autem tenetur?
+        </p>
+    <ul class="box">
+        <li><a href="https://churchofjesuschristtemples.org/harare-zimbabwe-temple/" target="_blank">Harare Zimbabwe temple</a></li>
+        <li><a href="https://churchofjesuschristtemples.org/cape-town-south-africa-temple/" target="_blank">Cape Town South Africa-temple</a></li>
+        <li><a href="https://churchofjesuschristtemples.org/salt-lake-temple/photographs/" target="_blank">Salt Lake temple</a></li>
+    </ul>
     </main>
-    <aside>
+    <aside class="box"> 
         <h2>Zimbabwe</h2>
         <img src="images/vicfalls.webp" alt="The majestic Victoria Falls" width="200">
-        <p>Zimbabwe is a land-locked country located in Southern Africa. It is a land field with vast varieties of flora and fauna. It is home to one of the seven wonders of the world 'The Victoria Falls'.</p>
+        <p>Zimbabwe is a land-locked country located in Southern Africa. 
+            It is a land field with vast varieties of flora and fauna. 
+            It is home to one of the seven wonders of the world 'The Victoria Falls'.
+        </p>
     </aside>
     <footer>
         <p>©2025 | Brian Timba | Hermanus, South Africa</p>
     </footer>
 </body>
-</html>
+<!--2025-03-11 -->
