home-page-enhancement

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="https://www.linkedin.com/feed/">linkedin</a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Brian Timba | WDD 130</h1>
         <img src="images/profile.webp" alt="My name is Brian Timba" width="200">
@@ -29,8 +30,7 @@
             I also enjoy food especially cheesy meals.
             I would also like to travel the world and explore new places and be exposed to different cultures.
             I'm interested in learning different languages as well.
-            -------------------------------------------------------
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt et ea quia consequatur inventore molestias voluptatibus voluptatum deserunt mollitia excepturi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto sapiente quasi ratione repellat optio, delectus in quaerat minus nostrum nemo ullam fuga dolore quibusdam corrupti sequi animi recusandae, ducimus aperiam non blanditiis. Ea, saepe illo repudiandae nisi aperiam quod voluptatibus magnam dignissimos beatae quidem numquam. Dicta quis voluptatibus repellat, excepturi quaerat ducimus itaque modi ut, natus eos officia autem tenetur?
+            
         </p>
     <ul class="box">
         <li><a href="https://churchofjesuschristtemples.org/harare-zimbabwe-temple/" target="_blank">Harare Zimbabwe temple</a></li>
@@ -46,6 +46,7 @@
             It is home to one of the seven wonders of the world 'The Victoria Falls'.
         </p>
     </aside>
+    </div>
     <footer>
         <p>©2025 | Brian Timba | Hermanus, South Africa</p>
     </footer>
