--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
-    <header>
+    <header class="logo">
         <img src="images/logo-crossedoars.png" alt="site logo">
-        <nav>
+        <nav class="navigation">
             <a href="index.html">Index</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
@@ -33,24 +33,41 @@
             </p>
             </article>
         </div> 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, nesciunt.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque perferendis nam enim quae, repellat incidunt iste qui. Consectetur quae ex molestiae dignissimos quis. Quam vitae repellendus qui deleniti voluptate quas.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam exercitationem possimus aperiam?
             </p>
+            <img src="images/raf4.webp" alt="canyon" width="200">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint necessitatibus officia architecto?</p>
         </section>     
-        <section>
-            <h2>Adventure Awaits You!</h2>
+        <section class="adventure">
+            <h3>Adventure Awaits You!</h3>
+            <figure>
             <img src="images/raf1.webp" alt="group rafting">
+            <figcaption>Group enjoying</figcaption>
+            </figure>
+            <figure>
             <img src="images/raf2.webp" alt="rapid splashing">
+            <figcaption>Fiesty rapids</figcaption>
+            </figure>
+            <figure>
             <img src="images/raf3.webp" alt="group enjoying">
+            <figcaption>Family treats</figcaption>
+            </figure>
+            <figure>
             <img src="images/raf6.webp" alt="solo rafting">
+            <figcaption>Solo rides</figcaption>
+            </figure>
+            <figure>
             <img src="images/raf5.webp" alt="beautiful nature">
+            <figcaption>Beautiful scenery</figcaption>
+            </figure>
         </section>
     </main>
-    <footer>
+    <footer class="footer-content">
         <p>©️ | 2025 | Breezy Adventures | Brian Timba</p>
         <nav class="social-links">
+            
             <a href="https://facebook.com" >
                 <img src="images/logo_facebook.webp" alt="facebook logo">
             </a>
