--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | Breezy Advebtures</title>
+    <title>Contact | Breezy Adventures</title>
     <meta name="description" content="Contact Us Page">
     <meta name="author" content="Brian Timba">
     
@@ -114,7 +114,7 @@
             </a>
             <p>
            <a href="https://app.moqups.com/xPmFa6LAiJ81QoNJI6uYDFEjPlRS9YlO/view/page/ad64222d5">Moqups</a>
-        </p>
+            </p>
         </nav>
         
     </footer>
