--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -25,23 +25,24 @@
     <main>
         <div class="hero"> <!--container-->
             <img src="images/hero-raft.webp" alt="hero image">
-            <h1>Breezy Adventures</h1>
             <article class="art"><!--content-->
+            <h1>Breezy Adventures</h1>   
             <img src="images/happy-client-1.webp" alt="happy client">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta debitis amet quod!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, voluptatem!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, voluptatem!
             </p>
             </article>
         </div>  
         <section>
         <div class="co-info"> 
             <h2>Get In Touch</h2>
-            <p>Address: 55 Rapid road, Victoria Falls.</p>
-            <p>Phone numbers:123-254-2527</p>
-            <p>Email:@bookings.com</p>
+            <address> 55 Rapid road, Victoria Falls<br>
+            Phone numbers:123-254-2527<br>
+            Email:@bookings.com<br>
+            </address>
         </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8036.197598325884!2d25.877780082018663!3d-17.978045723385044!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1f2cb893f9e934c9%3A0x38bcab1649b19452!2sZambezi%20River!5e0!3m2!1sen!2sza!4v1743257459459!5m2!1sen!2sza" width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8036.197598325884!2d25.877780082018663!3d-17.978045723385044!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1f2cb893f9e934c9%3A0x38bcab1649b19452!2sZambezi%20River!5e0!3m2!1sen!2sza!4v1743257459459!5m2!1sen!2sza" width="250" height="150" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         </section>
         <div>
