--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,8 +27,7 @@
         <h1>Breezy Adventures</h1>
         <img src="images/rafting-her(1).jpg" alt="hero-image">
         </div>
-        <div>
-            <section>
+        <secction class="purpose">
                 <form>
                     <fieldset>
                     <legend>Stay Updated With Our Weekly Newsletter</legend>
@@ -40,12 +39,14 @@
                         <label for="useremail">Email</label>
                         <input type="email" id="useremail" name="user's email">
                         </div>
+                        <div>
+                            <label for="sign">Sign-Up</label>
+                            <input type="checkbox" id="sign" name="sign-Up">
+                        </div>
                     </fieldset>
-                    <button type="submit">Submit</button>
+                    <button type="submit">Subscribe</button>
                 </form>
-            </section>
-        </div>
-        <div class="purpose">
+        <div>
             <h4>Our Offerings</h4>
             <figure>
                 <img src="images/splashy.jpg" alt="Splashy">
@@ -58,8 +59,8 @@
                 <img src="images/scenic.jpg" alt="scenic">
                 <figcaption>Enjoy the beautiful scenery</figcaption>
             </figure>
-            
-        </div> 
+        </div>     
+        </section>    
         <div class="trip"> 
             <a href="trips.html">Book A Trip</a>
         </div> 
