--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -28,21 +28,25 @@
             <table>
                 <caption>Available Trips</caption>
                 <tr>
-                    <th>Sunrise Cruze</th>
-                    <th>Noon Rafting</th>
-                    <th>Sunset Cruze</th>
+                    <th scope="col"></th>
+                    <th scope="col">Sunrise Cruze</th>
+                    <th scope="col">Noon Rafting</th>
+                    <th scope="col">Sunset Cruze</th>
                 </tr>
                 <tr>
+                    <th scope="row">Trips Info</th>
                     <td>Early Morning Trips. Breakfast served</td>
                     <td>Mid-day Trips. Light lunch and snacks included</td>
                     <td>Evening Trips. Dinner and options for accomodation available.</td>
                 </tr>
                 <tr>
+                    <th scope="row">Departure Times</th>
                     <td>departs at 6:30am</td>
                     <td>deaprts at 12.00pm</td>
                     <td>departs at 5:30pm</td>
                 </tr>
                 <tr>
+                    <th scope="row">Duration and Price</th>
                     <td>2 hours $10 p/p</td>
                     <td>3 hours $15 p/p</td>
                     <td>4 hours $25 p/p</td>
