--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,7 @@
         <h1>Breezy Adventures</h1>
         <img src="images/rafting-her(1).jpg" alt="hero-image">
         </div>
-        <secction class="purpose">
+        <section class="purpose">
                 <form>
                     <fieldset>
                     <legend>Stay Updated With Our Weekly Newsletter</legend>
@@ -40,11 +40,11 @@
                         <input type="email" id="useremail" name="user's email">
                         </div>
                         <div>
-                            <label for="sign">Sign-Up</label>
-                            <input type="checkbox" id="sign" name="sign-Up">
+                            <label for="subscribe">Sign-Up</label>
+                            <input type="checkbox" id="subscribe" name="subscribe">
                         </div>
                     </fieldset>
-                    <button type="submit">Subscribe</button>
+                    <button type="submit">Sign-Up</button>
                 </form>
         <div>
             <h4>Our Offerings</h4>
