--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trips | Breezy Adventures</title>
-    <meta name="description" content="Contact Us Page">
+    <meta name="description" content="Trips Information Page">
     <meta name="author" content="Brian Timba">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
